--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Drum Kit</title>
     <link
       rel="icon"
-      type="img"
+      type="img/png"
       href="./Assets/images/drum_with_drumsticks.png"
     />
     <link rel="stylesheet" href="./Assets/CSS/styles.css" />
